# back/src/api/routes/auth/index.js
@@ -4,53 +4,29 @@ var {AuthService} = require("../../../services");
 var middlewares = require('../../middlewares');
 const router = express.Router();
 var {Logger} = require('../../../utlis');
-
+var config = require('../../../config');
 
 module.exports = (app) => {
     app.use('/auth', router);
 
-    /**
-     * @swagger
-     * /auth/signup:
-     *   get:
-     *     summary: регистрация
-     *     description: по введенным логину-паролю с проверкой на уникальность логина создается пользователь.
-     *     operationId: signUp
-     *   parameters:
-     *      - in: login
-     *      name: login
-     *      description: Логин
-     *      schema:
-     *          type: string
-     *          example: test@test.ru
-     *      - in: password
-     *      name: password
-     *      description: Пароль
-     *      schema:
-     *          type: string
-     *          example: 12345678
-     *   requestBody:
-     *      content:
-     *          application/json:
-     *              schema:
-     *                  type: object
-     *                  properties:
-     *                      token:
-     *                      type: string
-     *                      example: "51872eca5efedcf424db4cf5afd16a9d00ad25b743a034c9c221afc85d18dcd5e4ad6e3f08607550"
-     */
     router.post('/signup',
         celebrate({
             body: Joi.object({
                 login: Joi.string().required(),
+                email: Joi.string().required(),
                 password: Joi.string().required(),
+                lastname: Joi.string(),
+                firstname: Joi.string(),
             }),
         }),
         async function (req, res, next) {
-            const {login, password} = req.body;
+            const {login, email, password} = req.body;
+            const {ip} = req.clientIp || null;
+            const {source, browser, os} = req.useragent;
+            const {lastname, firstname} = req.body || null;
             try {
                 const authServiceInstance = new AuthService();
-                const userData = await authServiceInstance.SignUp(login, password);
+                const userData = await authServiceInstance.SignUp(login, password, ip, source, browser, os, email, lastname, firstname);
                 return res.status(201).json(userData);
             } catch (e) {
                 Logger.error('🔥 error: %o', e);
@@ -59,23 +35,34 @@ module.exports = (app) => {
         });
 
     router.post('/signin',
-        celebrate({
-            body: Joi.object({
-                login: Joi.string().required(),
-                password: Joi.string().required(),
-            }),
-        }),
+
         async function (req, res, next) {
             const {login, password} = req.body;
+            const {ip} = req.clientIp || null;
+            const {source, browser, os} = req.useragent;
             try {
                 const authServiceInstance = new AuthService();
-                const userData = await authServiceInstance.SignIn(login, password);
-                return res.status(201).json(userData);
+                const userData = await authServiceInstance.SignIn(login, password, ip, source, browser, os);
+                setTokenCookie(res, userData.refreshToken);
+                return res.status(200).json(userData);
             } catch (e) {
-                Logger.error('🔥 error: %o',  e );
+                Logger.error('🔥 error: %o', e);
                 return next(e);
             }
         });
+
+    router.post('/refresh-token', async function (req, res, next) {
+        const token = req.cookies.refreshToken;
+        const ipAddress = req.ip;
+        const authServiceInstance = new AuthService();
+        authServiceInstance.refreshToken({token, ipAddress})
+            .then(({refreshToken, ...user}) => {
+                setTokenCookie(res, refreshToken);
+                res.json(user);
+            })
+            .catch(next);
+    });
+
     router.post('/logout',
         middlewares.isAuth,
         async function (req, res, next) {
@@ -83,9 +70,18 @@ module.exports = (app) => {
                 //@TODO AuthService.Logout(req.user) do some clever stuff
                 return res.status(200).end();
             } catch (e) {
-                Logger.error('🔥 error: %o',  e );
+                Logger.error('🔥 error: %o', e);
                 return next(e);
             }
         });
+
+    function setTokenCookie(res, token) {
+        // create http only cookie with refresh token that expires in 7 days
+        const cookieOptions = {
+            httpOnly: true,
+            expires: new Date(Date.now() + config.accessTokenExp),
+        };
+        res.cookie('refreshToken', token, cookieOptions);
+    }
 };
 
