# back/src/swagger.yaml
@@ -1,6 +1,6 @@
 openapi: 3.0.0
 info:
-  title: Node.js + MongoDB API - JWT Authentication with Refresh Tokens
+  title: Just a server for BEST.HACK.2021
   version: 1.0.0
 
 servers:
@@ -8,10 +8,10 @@ servers:
     description: Local development server
 
 paths:
-  /users/authenticate:
+  /auth/signup:
     post:
-      summary: Authenticate user credentials and return a JWT token and a cookie with a refresh token
-      operationId: authenticate
+      summary: Авторизация пользователя
+      operationId: signup
       requestBody:
         required: true
         content:
@@ -19,18 +19,18 @@ paths:
             schema:
               type: object
               properties:
-                username:
+                login:
                   type: string
-                  example: "jason"
+                  example: "mail@mail.ru"
                 password:
                   type: string
-                  example: "pass123"
+                  example: "12345678"
               required:
                 - username
                 - password
       responses:
         "200":
-          description: User details, a JWT access token and a refresh token cookie
+          description: Данные пользователя, a JWT т and a refresh token cookie
           headers:
             Set-Cookie:
               description: "`refreshToken`"
